--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="230dp"
-        android:background="@drawable/ic_wallpaper"
+        android:background="@drawable/ic_wallpaper2"
         android:gravity="center"
         android:orientation="vertical">
 
