--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context="com.example.bep_bepunctual.MainActivity">
+    tools:context="com.example.bep_bepunctual.LoginActivity">
 
     <!--Titelbild der App im Dashboard -->
 
