--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,7 +70,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="@string/login"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:onClick="showDates"/>
 
         <Button
             android:id="@+id/button_register"
